[gd_scene load_steps=10 format=2]

[ext_resource path="res://BinaryToAudio.gd" type="Script" id=1]
[ext_resource path="res://Woo.wav" type="AudioStream" id=2]
[ext_resource path="res://Global.gd" type="Script" id=3]
[ext_resource path="res://Control.tres" type="Theme" id=4]
[ext_resource path="res://BinaryToAudio2.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.2, 0.2, 0.592157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
expand_margin_top = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.619608, 0.619608, 0.619608, 1 )
expand_margin_top = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.443137, 0.443137, 0.443137, 1 )
expand_margin_top = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 1033.0
margin_bottom = 257.0

[node name="Panel2" type="Panel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
custom_styles/panel = SubResource( 4 )

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="BinaryToAudio" type="Panel" parent="."]
margin_left = 4.0
margin_top = 5.0
margin_right = 770.0
margin_bottom = 126.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="BinaryPlayer" type="AudioStreamPlayer" parent="BinaryToAudio"]
volume_db = -10.0
mix_target = 2

[node name="OpenFile" type="Button" parent="BinaryToAudio"]
margin_left = 4.0
margin_top = 3.0
margin_right = 77.0
margin_bottom = 30.0
focus_mode = 0
enabled_focus_mode = 0
text = "Open file"

[node name="Play" type="Button" parent="BinaryToAudio"]
margin_left = 4.0
margin_top = 32.0
margin_right = 77.0
margin_bottom = 59.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "Play"

[node name="Repeat" type="LineEdit" parent="BinaryToAudio"]
margin_left = 4.0
margin_top = 61.0
margin_right = 77.0
margin_bottom = 88.0
text = "8"
align = 1
max_length = 2
placeholder_text = "Bit Rep"
caret_blink = true

[node name="Hrz" type="LineEdit" parent="BinaryToAudio"]
margin_left = 4.0
margin_top = 89.5
margin_right = 77.0
margin_bottom = 116.5
text = "48000"
align = 1
max_length = 96000
placeholder_text = "Freq"
caret_blink = true

[node name="Compile" type="Button" parent="BinaryToAudio"]
margin_left = 79.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 59.0
focus_mode = 0
enabled_focus_mode = 0
text = "Compile"

[node name="OpenDir" type="Button" parent="BinaryToAudio"]
margin_left = 79.0
margin_top = 3.0
margin_right = 152.0
margin_bottom = 30.0
focus_mode = 0
enabled_focus_mode = 0
text = "Open Dir"

[node name="Volume" type="HSlider" parent="BinaryToAudio"]
margin_left = 79.0
margin_top = 61.0
margin_right = 152.0
margin_bottom = 88.0
min_value = -60.0
max_value = 0.0
value = -10.0

[node name="Panel" type="Panel" parent="BinaryToAudio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 154.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="BinaryToAudio/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -5.0
margin_right = -2.0
margin_bottom = -2.0
custom_constants/line_spacing = -8
text = "Length: 0 Seconds
Size: 0 Bytes
Path: "
autowrap = true
clip_text = true

[node name="Line" type="Panel" parent="BinaryToAudio"]
anchor_right = 1.0
margin_left = -2.0
margin_top = 123.0
margin_right = 261.0
margin_bottom = 125.0
custom_styles/panel = SubResource( 3 )

[node name="BinaryToAudio2" type="Panel" parent="."]
margin_left = 4.0
margin_top = 133.0
margin_right = 770.0
margin_bottom = 253.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )

[node name="BinaryPlayer" type="AudioStreamPlayer" parent="BinaryToAudio2"]
volume_db = -10.0
mix_target = 2

[node name="OpenFile" type="Button" parent="BinaryToAudio2"]
margin_left = 4.0
margin_top = 3.0
margin_right = 77.0
margin_bottom = 30.0
focus_mode = 0
enabled_focus_mode = 0
text = "Open file"

[node name="Play" type="Button" parent="BinaryToAudio2"]
margin_left = 4.0
margin_top = 32.0
margin_right = 77.0
margin_bottom = 59.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "Play"

[node name="Repeat" type="LineEdit" parent="BinaryToAudio2"]
margin_left = 4.0
margin_top = 61.0
margin_right = 77.0
margin_bottom = 88.0
text = "8"
align = 1
max_length = 2
placeholder_text = "Bit Rep"
caret_blink = true

[node name="Hrz" type="LineEdit" parent="BinaryToAudio2"]
margin_left = 4.0
margin_top = 89.5
margin_right = 77.0
margin_bottom = 116.5
text = "48000"
align = 1
max_length = 96000
placeholder_text = "Freq"
caret_blink = true

[node name="Compile" type="Button" parent="BinaryToAudio2"]
margin_left = 79.0
margin_top = 32.0
margin_right = 152.0
margin_bottom = 59.0
focus_mode = 0
enabled_focus_mode = 0
text = "Compile"

[node name="OpenDir" type="Button" parent="BinaryToAudio2"]
margin_left = 79.0
margin_top = 3.0
margin_right = 152.0
margin_bottom = 30.0
focus_mode = 0
enabled_focus_mode = 0
text = "Open Dir"

[node name="Volume" type="HSlider" parent="BinaryToAudio2"]
margin_left = 79.0
margin_top = 61.0
margin_right = 152.0
margin_bottom = 88.0
min_value = -60.0
max_value = 0.0
value = -10.0

[node name="Panel" type="Panel" parent="BinaryToAudio2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 154.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="BinaryToAudio2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -5.0
margin_right = -2.0
margin_bottom = -2.0
custom_constants/line_spacing = -8
text = "Length: 0 Seconds
Size: 0 Bytes
Path: "
autowrap = true
clip_text = true

[node name="Compile Screen" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 4
color = Color( 0, 0, 0, 0.568627 )

[node name="Label" type="Label" parent="Compile Screen"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "COMPILING"
align = 1
valign = 1

[node name="Close" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -62.0
margin_top = 4.0
margin_right = -3.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 31, 23 )
text = "Close"

[node name="Settings" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -62.0
margin_top = 33.0
margin_right = -3.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 31, 23 )
text = "Config"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.5
margin_top = -172.0
margin_right = 268.5
margin_bottom = 172.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
show_hidden_files = true

[connection signal="finished" from="BinaryToAudio/BinaryPlayer" to="BinaryToAudio" method="_on_BinaryPlayer_finished"]
[connection signal="button_down" from="BinaryToAudio/OpenFile" to="BinaryToAudio" method="_on_OpenFile_button_down"]
[connection signal="toggled" from="BinaryToAudio/Play" to="BinaryToAudio" method="_on_Play_toggled"]
[connection signal="text_changed" from="BinaryToAudio/Repeat" to="BinaryToAudio" method="_on_Repeat_text_changed"]
[connection signal="text_changed" from="BinaryToAudio/Hrz" to="BinaryToAudio" method="_on_Hrz_text_changed"]
[connection signal="button_down" from="BinaryToAudio/Compile" to="BinaryToAudio" method="_on_Compile_button_down"]
[connection signal="value_changed" from="BinaryToAudio/Volume" to="BinaryToAudio" method="_on_Volume_value_changed"]
[connection signal="finished" from="BinaryToAudio2/BinaryPlayer" to="BinaryToAudio2" method="_on_BinaryPlayer_finished"]
[connection signal="button_down" from="BinaryToAudio2/OpenFile" to="BinaryToAudio2" method="_on_OpenFile_button_down"]
[connection signal="toggled" from="BinaryToAudio2/Play" to="BinaryToAudio2" method="_on_Play_toggled"]
[connection signal="text_changed" from="BinaryToAudio2/Repeat" to="BinaryToAudio2" method="_on_Repeat_text_changed"]
[connection signal="text_changed" from="BinaryToAudio2/Hrz" to="BinaryToAudio2" method="_on_Hrz_text_changed"]
[connection signal="button_down" from="BinaryToAudio2/Compile" to="BinaryToAudio2" method="_on_Compile_button_down"]
[connection signal="value_changed" from="BinaryToAudio2/Volume" to="BinaryToAudio2" method="_on_Volume_value_changed"]
[connection signal="button_down" from="Close" to="." method="_on_Close_button_down"]
[connection signal="custom_action" from="FileDialog" to="." method="_on_FileDialog_custom_action"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="popup_hide" from="FileDialog" to="." method="_on_FileDialog_popup_hide"]
